# pydol

./: .gitignore  Cargo.toml  README.md
.github/workflows/: push_dan_pull_request.yml
src/: main.rs
src/interface/: event_loop.rs  mod.rs  window.rs
src/interface/window/: core.rs  creat.rs  mod.rs
src/interface/xml/: mod.rs  tests.rs
