[package]
name = "pydol"
version = "0.1.0"
authors = ["3442853561 <21147967+3442853561@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
raw-window-handle = "0.3.3"
winit = "0.25.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3" }
